fix: Authentication and Regen UI -styled auth/index.js and AuthForm component for better user experience -refactored regen button conditional so that it is not visible before submitting a message

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -139,17 +139,17 @@ a {
 
 ::-webkit-scrollbar-thumb:hover {
   --tw-bg-opacity: 1;
-  background-color: rgba(236, 236, 241, var(--tw-bg-opacity));
+  background-color: rgba(236, 236, 241, 1);
 }
 
 .dark ::-webkit-scrollbar-thumb {
   --tw-bg-opacity: 1;
-  background-color: rgba(86, 88, 105, var(--tw-bg-opacity));
+  background-color: rgba(86, 88, 105, 1);
 }
 
 .dark ::-webkit-scrollbar-thumb:hover {
   --tw-bg-opacity: 1;
-  background-color: rgba(172, 172, 190, var(--tw-bg-opacity));
+  background-color: rgba(172, 172, 190, 1);
 }
 
 @media (min-width: 768px) {
@@ -251,7 +251,7 @@ pre.code-container {
 .btn-neutral {
   --tw-bg-opacity: 1;
   --tw-text-opacity: 1;
-  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+  background-color: rgba(255, 255, 255, 1);
   border-color: rgba(0, 0, 0, 0.1);
   border-width: 1px;
   color: rgba(64, 65, 79, var(--tw-text-opacity));
@@ -262,7 +262,7 @@ pre.code-container {
 .btn-primary {
   --tw-bg-opacity: 1;
   --tw-text-opacity: 1;
-  background-color: rgba(16, 163, 127, var(--tw-bg-opacity));
+  background-color: rgba(16, 163, 127,1);
   color: rgba(255, 255, 255, var(--tw-text-opacity));
 }
 
